addeed docker-compose.yml to create the postgreSQL data base

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=transport-api
 spring.jpa.hibernate.ddl-auto=validate
+
+# Connexion à la base locale
+spring.datasource.url=jdbc:postgresql://localhost:5432/transport_db
+spring.datasource.username=dzuser
+spring.datasource.password=dzpassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Pour voir les requêtes SQL dans la console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#dialect postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
