--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   db:
-    image: postgres:16-alpine
+    image: postgis/postgis:16-3.4-alpine
     container_name: dz-transport-db
     ports:
       - "5432:5432"  # Le port par défaut de Postgres
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: dzpassword # mot de passe
       POSTGRES_DB: transport_db   # Le nom de la base
     volumes:
-      - postgres_data:/var/lib/postgresql/data # Pour ne pas perdre les données si tu éteins le PC
+      - postgres_data:/var/lib/postgresql/data # Pour ne pas perdre les données si j'éteins le PC
 
 volumes:
   postgres_data:
